force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Arrival_Airport_l__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Arrival_Airport_l__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Arrival Airport</label>
    <referenceTo>sugati__Airport__c</referenceTo>
    <relationshipLabel>Supplier Booking</relationshipLabel>
    <relationshipName>Supplier_Booking</relationshipName>
    <type>Lookup</type>
</CustomField>