force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Arrival_Terminal__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Arrival_Terminal__c</fullName>
    <label>Arrival Terminal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>