force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Avrage_Margin__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Avrage_Margin__c</fullName>
    <formula>sugati__Sum_Margin__c/sugati__Total_Cost_Records__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avrage Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>