force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Booking_No__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Booking_No__c</fullName>
    <label>Booking No.</label>
    <length>30</length>
    <type>Text</type>
</CustomField>