force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Booking_Status__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Booking_Status__c</fullName>
    <label>Booking Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Out Of Date Range</fullName>
            </value>
            <value>
                <fullName>Ticketed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>