force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Cancellation_Amount__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Cancellation_Amount__c</fullName>
    <formula>IF( ISBLANK(sugati__SB_Cancellation_Per__c), 0.00, (sugati__SB_Marked_Up_Cost__c * sugati__SB_Cancellation_Per__c)/100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cancellation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>