force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Cancellation_Amt__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Cancellation_Amt__c</fullName>
    <label>Cancellation Amt</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>