force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Carrier__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Carrier__c</fullName>
    <label>Carrier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adria Airways</fullName>
            </value>
            <value>
                <fullName>Aegean</fullName>
            </value>
            <value>
                <fullName>Aer Arann Express</fullName>
            </value>
            <value>
                <fullName>Aer Lingus</fullName>
            </value>
            <value>
                <fullName>Aero California</fullName>
            </value>
            <value>
                <fullName>Aeroflot Airlines</fullName>
            </value>
            <value>
                <fullName>Aerogal</fullName>
            </value>
            <value>
                <fullName>Aerolineas Argentinas</fullName>
            </value>
            <value>
                <fullName>Aerolineas Del Sur</fullName>
            </value>
            <value>
                <fullName>Aerolink</fullName>
            </value>
            <value>
                <fullName>Aeromexico</fullName>
            </value>
            <value>
                <fullName>Aeropostal</fullName>
            </value>
            <value>
                <fullName>African Airways</fullName>
            </value>
            <value>
                <fullName>Air Algerie</fullName>
            </value>
            <value>
                <fullName>Air Asia</fullName>
            </value>
            <value>
                <fullName>Air Bagan</fullName>
            </value>
            <value>
                <fullName>Air Berlin</fullName>
            </value>
            <value>
                <fullName>Air Blue</fullName>
            </value>
            <value>
                <fullName>Air Botswana Pty.</fullName>
            </value>
            <value>
                <fullName>Air Burkina</fullName>
            </value>
            <value>
                <fullName>Air Caledonie</fullName>
            </value>
            <value>
                <fullName>Air Caledonie International</fullName>
            </value>
            <value>
                <fullName>Air Canada</fullName>
            </value>
            <value>
                <fullName>Air Caraibes</fullName>
            </value>
            <value>
                <fullName>Air China</fullName>
            </value>
            <value>
                <fullName>Air Dolomiti</fullName>
            </value>
            <value>
                <fullName>Air Engiadina</fullName>
            </value>
            <value>
                <fullName>Air Europa</fullName>
            </value>
            <value>
                <fullName>Air Excel</fullName>
            </value>
            <value>
                <fullName>Air Fiji</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>