force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Client_Group__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Client_Group__c</fullName>
    <label>Client Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>