force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Commission_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Commission_Due_Date__c</fullName>
    <label>Commission Due Date</label>
    <type>Date</type>
</CustomField>