force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Commission_In_Selling_Currency__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Commission_In_Selling_Currency__c</fullName>
    <inlineHelpText>Total Commission converted in the selling currency.</inlineHelpText>
    <label>Commission In Selling Currency</label>
    <summarizedField>sugati__Supplier_Cost__c.sugati__SC_Commission_Value_SC__c</summarizedField>
    <summaryFilterItems>
        <field>sugati__Supplier_Cost__c.sugati__SC_Selected__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>sugati__Supplier_Cost__c.sugati__Is_Dummy__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>sugati__Supplier_Cost__c.sugati__SC_Supplier_Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>