force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Component_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Component_Name__c</fullName>
    <formula>IF( 
   ISBLANK( sugati__Linked_Services_Extra_Item__c ), 
   RecordType.Name, 
   TEXT( sugati__Linked_Services_Extra_Item__r.sugati__LSEI_Component__c ) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Component Name</label>
    <type>Text</type>
</CustomField>