force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Cost_Group__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Cost_Group__c</fullName>
    <label>Cost Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BASE</fullName>
            </value>
            <value>
                <fullName>QSUP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>