force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Cost_PP__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Cost_PP__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Cost Per Person</inlineHelpText>
    <label>Cost PP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>