force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Cost_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Cost_Type__c</fullName>
    <description>This will be used for booking options other than Accommodation and Flights</description>
    <label>Cost_Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Car</fullName>
            </value>
            <value>
                <fullName>Taxi</fullName>
            </value>
            <value>
                <fullName>Excursion</fullName>
            </value>
            <value>
                <fullName>Extra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>