force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Costing_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Costing_Type__c</fullName>
    <label>Costing Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commission</fullName>
            </value>
            <value>
                <fullName>Markup</fullName>
                <default>true</default>
                <label>Markup</label>
            </value>
            <value>
                <fullName>Margin</fullName>
            </value>
            <value>
                <fullName>Margin &amp; Commission</fullName>
            </value>
            <value>
                <fullName>Markup &amp; Commission</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>