force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Day__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Day__c</fullName>
    <label>Day</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>