force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Departure_Airport__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Departure_Airport__c</fullName>
    <label>Departure Airport</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abu Dhabi International</fullName>
            </value>
            <value>
                <fullName>Accra</fullName>
            </value>
            <value>
                <fullName>Addis Ababa</fullName>
            </value>
            <value>
                <fullName>Adelaide</fullName>
            </value>
            <value>
                <fullName>Aerogare</fullName>
            </value>
            <value>
                <fullName>Aero Parque Buenos Aires</fullName>
            </value>
            <value>
                <fullName>Aeroporto Internacional Guarulhos</fullName>
            </value>
            <value>
                <fullName>Afonso Pena</fullName>
            </value>
            <value>
                <fullName>Agadir</fullName>
            </value>
            <value>
                <fullName>Airstrip</fullName>
            </value>
            <value>
                <fullName>Al Bateen</fullName>
            </value>
            <value>
                <fullName>Alberto Delgado</fullName>
            </value>
            <value>
                <fullName>Al Dhafra Military</fullName>
            </value>
            <value>
                <fullName>Algiers</fullName>
            </value>
            <value>
                <fullName>Alicante</fullName>
            </value>
            <value>
                <fullName>Allen County</fullName>
            </value>
            <value>
                <fullName>Amanpulo</fullName>
            </value>
            <value>
                <fullName>Amanwana</fullName>
            </value>
            <value>
                <fullName>Ambergris Caye</fullName>
            </value>
            <value>
                <fullName>Ambon</fullName>
            </value>
            <value>
                <fullName>Amman</fullName>
            </value>
            <value>
                <fullName>Amritsar</fullName>
            </value>
            <value>
                <fullName>Amsterdam</fullName>
            </value>
            <value>
                <fullName>Andamans</fullName>
            </value>
            <value>
                <fullName>Andros Town</fullName>
            </value>
            <value>
                <fullName>Anguilla</fullName>
            </value>
            <value>
                <fullName>Anjajvay</fullName>
            </value>
            <value>
                <fullName>Antananairvo</fullName>
            </value>
            <value>
                <fullName>Antigua</fullName>
            </value>
            <value>
                <fullName>Antonio Maceo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>