force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Departure_Airport_l__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Departure_Airport_l__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Departure Airport</label>
    <referenceTo>sugati__Airport__c</referenceTo>
    <relationshipLabel>Supplier Booking (Departure Airport)</relationshipLabel>
    <relationshipName>Supplier_Booking1</relationshipName>
    <type>Lookup</type>
</CustomField>