force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Deposit_Notes__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Deposit_Notes__c</fullName>
    <label>Deposit Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>