force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Deposite_Overwrite__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Deposite_Overwrite__c</fullName>
    <label>Deposite Overwrite</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>