force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Enable_Post_Booking_Supplier_Payments__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Enable_Post_Booking_Supplier_Payments__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If cost gets updated on the supplier booking then it will create a supplier payment record if the opportunity has booked.</inlineHelpText>
    <label>Enable Post Booking Supplier Payments</label>
    <type>Checkbox</type>
</CustomField>