force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Exchange_Rate_Look_Up__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Exchange_Rate_Look_Up__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If Based Cost is not in GBP.</description>
    <inlineHelpText>If Based Cost is not in GBP.</inlineHelpText>
    <label>Exchange Rate Look Up</label>
    <referenceTo>sugati__Exchange_Rate__c</referenceTo>
    <relationshipLabel>Supplier Booking</relationshipLabel>
    <relationshipName>Supplier_Booking</relationshipName>
    <type>Lookup</type>
</CustomField>