force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Exclude_From_RSP__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Exclude_From_RSP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude From RSP</label>
    <type>Checkbox</type>
</CustomField>