force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Flight_No__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Flight_No__c</fullName>
    <label>Flight No</label>
    <length>10</length>
    <type>Text</type>
</CustomField>