force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Flight_Ref__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Flight_Ref__c</fullName>
    <label>Flight Ref</label>
    <length>100</length>
    <type>Text</type>
</CustomField>