force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_From_Place_Country_Id__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_From_Place_Country_Id__c</fullName>
    <label>From Place Country Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>