force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_From_Station__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_From_Station__c</fullName>
    <label>From Station</label>
    <length>255</length>
    <type>Text</type>
</CustomField>