force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Grade_Code__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Grade_Code__c</fullName>
    <label>Grade Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>