force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Ground_Handler__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Ground_Handler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ground Handler</label>
    <referenceTo>sugati__Supplier__c</referenceTo>
    <relationshipLabel>Supplier Booking (Ground Handler)</relationshipLabel>
    <relationshipName>Supplier_Booking1</relationshipName>
    <type>Lookup</type>
</CustomField>