force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Hide_In_Itinerary_At_A_Glance__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Hide_In_Itinerary_At_A_Glance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide In Itinerary At A Glance</label>
    <type>Checkbox</type>
</CustomField>