force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Hide_In_Itinerary_Day_By_Day__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Hide_In_Itinerary_Day_By_Day__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide In Itinerary Day By Day</label>
    <type>Checkbox</type>
</CustomField>