force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Holiday_Suggestion__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Holiday_Suggestion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Holiday Suggestion</label>
    <referenceTo>sugati__Holiday_Suggestions__c</referenceTo>
    <relationshipLabel>Supplier Booking</relationshipLabel>
    <relationshipName>Supplier_Booking</relationshipName>
    <type>Lookup</type>
</CustomField>