force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Is_Standard__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Is_Standard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_Standard</label>
    <type>Checkbox</type>
</CustomField>