force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Itinerary_At_A_Glance__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Itinerary_At_A_Glance__c</fullName>
    <label>Itinerary At A Glance</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>