force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Itinerary_Day_By_Day_Layout__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Itinerary_Day_By_Day_Layout__c</fullName>
    <label>Itinerary Day By Day Layout</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full-Width Image</fullName>
            </value>
            <value>
                <fullName>Side-by-Side Image and Text</fullName>
            </value>
            <value>
                <fullName>Stacked Image and Text</fullName>
            </value>
            <value>
                <fullName>Text Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>