force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Itinerary_Description__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Itinerary_Description__c</fullName>
    <label>Itinerary Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>