force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Jet_Model__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Jet_Model__c</fullName>
    <label>Jet Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>