force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Length_of_Journey__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Length_of_Journey__c</fullName>
    <label>Length of Journey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>