force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Local_Arrangements_Content__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Local_Arrangements_Content__c</fullName>
    <label>Local Arrangements Content</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>