force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Luggage_Note__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Luggage_Note__c</fullName>
    <label>Luggage Note</label>
    <length>60</length>
    <type>Text</type>
</CustomField>