force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Margin__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Margin__c</fullName>
    <description>Actual Margin</description>
    <inlineHelpText>Actual Margin</inlineHelpText>
    <label>Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>