force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Marked_Up_Cost__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Marked_Up_Cost__c</fullName>
    <label>Marked Up Cost</label>
    <summarizedField>sugati__Supplier_Cost__c.sugati__SC_MarkUp_Cost_for_Selling_Price__c</summarizedField>
    <summaryFilterItems>
        <field>sugati__Supplier_Cost__c.sugati__Is_Dummy__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>sugati__Supplier_Cost__c.sugati__SC_Selected__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>sugati__Supplier_Cost__c.sugati__SC_Supplier_Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>