force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Meal_Basis__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Meal_Basis__c</fullName>
    <label>Meal Basis</label>
    <length>40</length>
    <type>Text</type>
</CustomField>