force-app/main/default/objects/sugati__Supplier_Booking__c/fields/sugati__SB_Multicom_AU_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Multicom_AU_Name__c</fullName>
    <inlineHelpText>This field is to store Multicom response (Internal uses only)</inlineHelpText>
    <label>Multicom Accommodation Unit Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>